<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RemindMeActivity!</string>
    <string name="app_name">RemindMe</string>
    
    
    
    
    <!-- Splash -->
    <string name="splash_footer">Nandroid©</string>
    
    <!-- Menu strings -->
    
    <string name="tags_header">Etiquetas</string>
    <string name="menu_today">Hoy</string>
    <string name="menu_all">Todas</string>
    <string name="menu_tag">Tags</string>
   
    
    
    <string name="today_header">Hoy</string>
    
    
    
    <string name="new_header">Nueva Tarea</string>
    
   	<!-- Today View -->
   	<string name="today_expired">Tareas acumuladas</string>
   	<string name="today_noexpiredtasks">No hay tareas acumuladas</string>
   	<string name="today_toastEmpty">No tienes tareas programadas para hoy. ¡Hora de relajarse!</string>
   	
   	
   
    <!-- New View -->
    <string name="new_name">Tarea</string>
    <string name="new_name_hint">Introduce el nombre de la tarea</string>
    <string name="new_description">Descripcion</string>
    <string name="new_date">Fecha Límite</string>
    <string name="new_date_hint">Selecciona la fecha</string>
    <string name="new_repeat">Repetición</string>
    <string name="new_repeat_hint">Selecciona cada cuanto se repite</string>
    <string name="new_addButton">Añadir</string>
    <string name="new_time">Hora</string>
    <string name="new_time_hint">Selecciona la hora</string>
    <string name="new_tag">Etiqueta</string>
    <string name="new_tag_hint"></string>
    
    <string name="edit_header">Editar Tarea</string>
    
    <string-array name="new_array_spinnerRepetition">
        <item>Única</item>
        <item>Diaria</item>
        <item>Semanal</item>
        <item>Mensual</item>
        <item>Anual</item>
    </string-array>
    
    
    <!-- All View -->
    <string name="all_header">Pendientes</string>
    <string name="all_taskname">Tarea</string>
    <string name="all_taskid">ID</string>
    <string name="all_toastEmpty">¡Relájate miarma! No tienes ninguna tarea pendiente</string>
    
    <!-- Task View -->
    <string name="task_headertxt">Tarea</string>
    <string name="task_subtask">Subtareas</string>
    <string name="task_subtaskhint">Crear subtarea</string>
   
    <!-- Calendar -->
   <string name="calendar_hint">Toca el primer o el ultimo dia del mes para moverte al mes previo o siguiente</string>
   <string name="dialog_edit">Editar</string>
   <string name="dialog_cancel">Cancelar</string>
   <string name="dialog_ask_edit">¿Deseas editar la tarea?</string>
   <string name="dialog_delete">Eliminar todo</string>
   <string name="dialog_deleteTask">Elimar tarea</string>
   <string name="dialog_ask_delete">¿Desea eliminar la tarea y sus subtareas?</string>
   
   <string name="dialog_delay">Posponer el aviso:</string>
   
   <string name="menu_header">Menu</string>
   <string name="menu_toast_deleteAll">Se ha eliminado la tarea y sus subtareas</string>
   <string name="menu_toast_delete">La tarea ha sido eliminada</string>
   <string name="completed_toastEmpty">No hay tareas completas, lo cual puede ser un problema...</string>
   <string name="task_toast_hasSubtask">Hay subtareas pendientes. Completalas antes</string>
   <string name="completed_header">Tareas Completadas</string>
   <string name="new_toast_missingData">Los campos nombre, fecha limite y fecha de aviso son obligatorios</string>
   <string name="new_dateNotice">Fecha de aviso</string>
   <string name="new_toast_dateNoSense">La fecha de aviso no puede ser superior a la fecha limite</string>
   <string-array name="new_array_spinnerNotice">
       <item >1 hora</item>
       <item >2 horas</item>
       <item >4 horas</item>
       <item >8 horas</item>
       <item >12 horas</item>
       <item >1 dia</item>
       <item >2 dias</item>
    </string-array>
    
   <string name="new_spinnerNotice_onehour">1 hora</string>
   <string name="new_spinnerNotice_twohours">2 horas</string>
   <string name="new_spinnerNotice_fourhours">4 horas</string>
   <string name="new_spinnerNotice_eighthour">8 horas</string>
   <string name="new_spinnerNotice_twelvehour">12 horas</string>
   <string name="new_spinnerNotice_oneday">1 dia</string>
   <string name="new_spinnerNotice_twodays">2 dias</string>
   
   <string name="day_toast_noTask">No tienes tareas programadas para este día</string>
   <string name="task_date">Fecha:</string>
   <string name="task_dateNotice">Aviso:</string>
   <string name="edit_editButton">Editar</string>
   <string name="edit_toastModifRestricted">Sólo puedes modificar la hora de la tarea y la antelación del aviso</string>
   <string name="menu_bottom">ETS Ing. Informatica</string>
   
   <string name="notif_complete">Completar</string>
   <string name="notif_delay">Posponer</string>
   
   <string-array name="dialogDelay_array_spinnerDelay">
       <item >15 min</item>
       <item >30 min</item>
       <item >1 hora</item>
       <item >2 horas</item>
       <item >4 horas</item>
       <item >8 horas</item>
       <item >1 dia</item>
    </string-array>
   
</resources>