<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".RemindNewActivity" >

    <RelativeLayout
        android:id="@+id/RelativeLayout_Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_background" >

        <!-- TODO: Cabecera, añadir el texto y una imagen? -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_header_margin"
            android:text="@string/new_header"
            android:textColor="@color/header_text"
            android:textSize="@dimen/text_header" > </TextView>
            
            <ImageView 
            android:layout_width="@dimen/header_icon"
            android:layout_height="@dimen/header_icon"
            android:layout_centerInParent="true"
            android:id="@+id/Header_NewImage"
            android:src="@drawable/header_new"
            android:layout_toLeftOf="@+id/Header_HomeImage"
            
            />
        
         <ImageView 
            android:layout_width="@dimen/header_icon"
            android:layout_height="@dimen/header_icon"
            android:id="@+id/Header_HomeImage"
            android:src="@drawable/header_home"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/header_marginLeft"
            android:layout_marginRight="@dimen/header_marginRight"
            android:layout_centerInParent="true"/>
       
    </RelativeLayout>

    <ScrollView
        android:id="@+id/NewScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/NewLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/app_padding_right"
            android:paddingRight="@dimen/app_padding_right" >

            <TextView
                android:id="@+id/TextView_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_name"
                android:textColor="@color/normalText"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/EditText_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_name_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/newedit_normalText"
                android:textColorHint="@color/hintText2" />

            <TextView
                android:id="@+id/TextView_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_date"
                android:textColor="@color/normalText"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/New_ButtonDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@layout/custom_button"
                    android:hint="@string/new_date_hint"
                    android:maxLines="4"
                    android:onClick="showDatePickerDialog"
                    android:textColor="@color/newedit_normalText"
                    android:textColorHint="@color/hintText2" />
            </RelativeLayout>

            <TextView
                android:id="@+id/New_TextViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_time"
                android:textColor="@color/normalText"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/New_ButtonTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@layout/custom_button"
                    android:hint="@string/new_time_hint"
                    android:maxLines="4"
                    android:onClick="showTimePickerDialog"
                    android:textColor="@color/newedit_normalText"
                    android:textColorHint="@color/hintText2" />
            </RelativeLayout>

            <!-- Notice Date -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/New_TextViewDateNotice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_dateNotice"
                    android:textColor="@color/normalText"
                    android:textSize="@dimen/new_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/New_TextViewDateNoticeShow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/New_TextViewDateNotice" />
            </RelativeLayout>

            <Spinner
                android:id="@+id/New_SpinnerNotice"
                android:layout_width="@dimen/spinner_width"
                android:layout_height="@dimen/spinner_height"
                android:hint="@string/new_repeat_hint" />

            <!-- Repeat -->

            <TextView
                android:id="@+id/TextView_Repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_repeat"
                android:textColor="@color/normalText"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/New_SpinnerRepeat"
                android:layout_width="@dimen/spinner_width"
                android:layout_height="@dimen/spinner_height"
                android:hint="@string/new_repeat_hint" />

            <TextView
                android:id="@+id/New_TextViewTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_tag"
                android:textColor="@color/normalText"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/New_EditTextTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_tag"
                android:inputType="text|textLongMessage"
                android:maxLines="4"
                android:textColor="@color/newedit_normalText" />

            <TextView
                android:id="@+id/New_TextView_Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_description"
                android:textColor="@color/normalText"
                android:textSize="@dimen/new_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/New_EditText_Description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_description"
                android:inputType="text|textLongMessage"
                android:maxLines="4"
                android:textColor="@color/newedit_normalText" />

            <Button
                android:id="@+id/New_Button_Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addTask"
                android:text="@string/new_addButton" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>