<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/RelativeLayout_Header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_background">"
        
        <!--TODO: Cabecera, añadir el texto y una imagen? -->
        <TextView 
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
            android:text="@string/menu_header"
            android:textSize="@dimen/text_header"
            android:textColor="@color/header_text"
            android:layout_marginLeft="@dimen/text_header_margin"
            android:layout_centerInParent="true"></TextView>
        
        <ImageView 
            android:layout_width="@dimen/header_icon"
            android:layout_height="@dimen/header_icon"
            android:layout_centerInParent="true"
            android:id="@+id/Header_NewImage"
            android:src="@drawable/header_new"
            android:layout_toLeftOf="@+id/Header_HomeImage"
            
            />
        
         <ImageView 
            android:layout_width="@dimen/header_icon"
            android:layout_height="@dimen/header_icon"
            android:id="@+id/Header_HomeImage"
            android:src="@drawable/header_home"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/header_marginLeft"
            android:layout_marginRight="@dimen/header_marginRight"
            android:layout_centerInParent="true"/>
        
         <!-- Body -->
    </RelativeLayout>
        
    <RelativeLayout
        android:id="@+id/Menu_RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:layout_marginBottom="110dp"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
      
        <RelativeLayout 
               	android:id="@+id/Menu_RelativeTableToday"
               	android:layout_width="@dimen/menu_width"
              	android:layout_height="@dimen/menu_height"
              	android:background="@color/splash_title"
				android:layout_marginRight="@dimen/menu_marginLeftRow"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true">
               <TextView
                   android:id="@+id/Menu_TextViewToday"
                   android:layout_height="wrap_content"
                   android:layout_width="wrap_content"
                   android:text="@string/menu_today"
                   android:textColor="@color/menu_texticon"
                   android:textSize="@dimen/menu_texticon"
                   android:layout_centerInParent="true" />

           </RelativeLayout>
                
                 <ImageView
                    android:id="@+id/Menu_ImageView_Calendar"
                    android:layout_width="@dimen/menu_icon"
                    android:layout_height="@dimen/menu_icon"
                    android:clickable="true"
                    android:src="@drawable/ic_calendar2" 
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"/> 

            <RelativeLayout
                android:id="@+id/Menu_RelativeTableTags"
                android:layout_width="@dimen/menu_width"
                android:layout_height="@dimen/menu_height"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="0dp"
                android:background="@color/splash_title" >

>

                    <TextView
                        android:id="@+id/Menu_TextViewTags"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/menu_tag"
                        android:textColor="@color/menu_texticon"
                        android:textSize="@dimen/menu_texticon"
                        android:layout_centerInParent="true" />
				</RelativeLayout>
                 
				<RelativeLayout
				    android:id="@+id/Menu_RelativeTableAll"
				    android:layout_width="@dimen/menu_width"
				    android:layout_height="@dimen/menu_height"
				    android:layout_marginLeft="0dp"
				    android:background="@color/splash_title"
				    android:layout_alignParentRight="true"
					android:layout_alignParentBottom="true" >

				    <TextView
				        android:id="@+id/Menu_TextViewAll"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_centerInParent="true"
				        android:text="@string/menu_all"
				        android:textColor="@color/menu_texticon"
				        android:textSize="@dimen/menu_texticon" />
				</RelativeLayout>

	</RelativeLayout>
    
	<EditText 
	    android:id="@+id/Menu_EditTextNotification"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"/>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
	    android:layout_alignParentBottom="true"
	    android:background="#FF4000"
	    android:orientation="vertical" >

	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:gravity="center"
	        android:text="@string/menu_bottom"
	        android:textColor="@android:color/white"
	        android:textSize="@dimen/app_info" />
	</LinearLayout>

</RelativeLayout>